[package]
name = "agents"
version = "0.1.0"
edition = "2021"
authors = ["Sheyla Leyva"]
description = "Agentic loop with tool calling"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
rig = { version = "0", package = "rig-core" }
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]
api-llm-key = []
